# fflames

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ff_utils.hpp  fflame_generator.hpp  fractal_flame.hpp  ifs.hpp  ifs_types.hpp  main.cpp  render_flame.hpp
fflames/: fflame_generator.hpp  fractal_flame.hpp  ifs.hpp  ifs_types.hpp  render_flame.hpp
fflames/util/: EventQueue.hpp  factory.hpp  ff_utils.hpp
script/: build  run  test
tests/: CMakeLists.txt  variant_tests.cpp
util/: EventQueue.hpp  factory.hpp  ff_utils.hpp
